package local.sop.sopinfo.sopinstructor.application.api.dto;

import local.sop.common.libs.sharedkernel.compositekey.dtos.CompositeKey;

public record CreatedSopInstructorResult(
    CompositeKey id
) {

}
